--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"e2e": "playwright test"
 	},
 	"dependencies": {
-		"electron-updater": "^5.3.0"
+		"electron-updater": "^5.3.0",
+		"firebase": "^9.22.0"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.32.0",
