--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 	},
 	"dependencies": {
 		"electron-updater": "^5.3.0",
-		"firebase": "^9.22.0"
+		"firebase": "^9.22.0",
+		"react-router-dom": "^6.11.2"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.32.0",
