--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^3.1.0",
+		"autoprefixer": "^10.4.14",
 		"electron": "^23.2.0",
 		"electron-builder": "^23.6.0",
+		"postcss": "^8.4.23",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"sass": "^1.60.0",
+		"tailwindcss": "^3.3.2",
 		"typescript": "^5.0.2",
 		"vite": "^4.1.4",
 		"vite-plugin-electron": "^0.11.2",
