--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"github-markdown-css": "^5.2.0",
 		"react-markdown": "^8.0.7",
 		"react-router-dom": "^6.11.2",
+		"react-syntax-highlighter": "^15.5.0",
 		"remark-gfm": "^3.0.1",
 		"split-pane-react": "^0.1.3"
 	},
