--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
 		"react-router-dom": "^6.11.2",
 		"react-syntax-highlighter": "^15.5.0",
 		"remark-gfm": "^3.0.1",
-		"split-pane-react": "^0.1.3"
+		"split-pane-react": "^0.1.3",
+		"uid": "^2.0.2"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.32.0",
