--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@playwright/test": "^1.32.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
+		"@types/react-syntax-highlighter": "^15.5.7",
 		"@vitejs/plugin-react": "^3.1.0",
 		"autoprefixer": "^10.4.14",
 		"electron": "^23.2.0",
