--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@replit/codemirror-vim": "^6.0.14",
 		"@uiw/codemirror-themes": "^4.20.2",
 		"@uiw/react-codemirror": "^4.20.2",
+		"date-fns": "^2.30.0",
 		"electron-updater": "^5.3.0",
 		"firebase": "^9.22.0",
 		"framer-motion": "^10.12.16",
