--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@firebase/database-types": "^0.10.4",
 		"@lezer/highlight": "^1.1.6",
 		"@replit/codemirror-vim": "^6.0.14",
+		"@tailwindcss/container-queries": "^0.1.1",
 		"@uiw/codemirror-themes": "^4.20.2",
 		"@uiw/react-codemirror": "^4.20.2",
 		"date-fns": "^2.30.0",
