--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	"dependencies": {
 		"@codemirror/lang-markdown": "^6.1.1",
 		"@codemirror/language-data": "^6.3.1",
+		"@codemirror/view": "^6.13.2",
 		"@firebase/database-types": "^0.10.4",
 		"@replit/codemirror-vim": "^6.0.14",
 		"@tailwindcss/container-queries": "^0.1.1",
