--- a/package.json
+++ b/package.json
@@ -21,21 +21,20 @@
 	"dependencies": {
 		"@codemirror/lang-markdown": "^6.1.1",
 		"@codemirror/language-data": "^6.3.1",
+		"@codemirror/view": "^6.13.2",
 		"@firebase/database-types": "^0.10.4",
-		"@lezer/highlight": "^1.1.6",
 		"@replit/codemirror-vim": "^6.0.14",
+		"@tailwindcss/container-queries": "^0.1.1",
 		"@uiw/codemirror-themes": "^4.20.2",
 		"@uiw/react-codemirror": "^4.20.2",
 		"date-fns": "^2.30.0",
 		"electron-updater": "^5.3.0",
 		"firebase": "^9.22.0",
-		"framer-motion": "^10.12.16",
 		"github-markdown-css": "^5.2.0",
 		"react-markdown": "^8.0.7",
 		"react-router-dom": "^6.11.2",
 		"react-syntax-highlighter": "^15.5.0",
 		"remark-gfm": "^3.0.1",
-		"split-pane-react": "^0.1.3",
 		"uid": "^2.0.2"
 	},
 	"devDependencies": {
