--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,9 @@
-{ "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }] }
+{
+	"routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
+	"redirects": [
+		{
+			"source": "/app",
+			"destination": "https://vercel.com/docs/concepts/projects/project-configuration#redirects"
+		}
+	]
+}
