--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-	"routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }],
-	"redirects": [
-		{
-			"source": "/app",
-			"destination": "https://vercel.com/docs/concepts/projects/project-configuration#redirects"
-		}
-	]
+	"routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
 }
