--- a/package.json
+++ b/package.json
@@ -1,62 +1,73 @@
 {
-	"name": "vimnotes",
-	"version": "1.0.0",
-	"main": "dist-electron/main/index.js",
-	"description": "A simple markdown app with vim keymappings.",
-	"author": "Fdiaz",
-	"license": "MIT",
-	"private": true,
-	"debug": {
-		"env": {
-			"VITE_DEV_SERVER_URL": "http://127.0.0.1:7777/"
-		}
-	},
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build && electron-builder",
-		"preview": "vite preview",
-		"pree2e": "vite build --mode=test",
-		"e2e": "playwright test"
-	},
-	"dependencies": {
-		"@codemirror/lang-markdown": "^6.1.1",
-		"@codemirror/language-data": "^6.3.1",
-		"@codemirror/view": "^6.13.2",
-		"@firebase/database-types": "^0.10.4",
-		"@replit/codemirror-vim": "^6.0.14",
-		"@tailwindcss/container-queries": "^0.1.1",
-		"@uiw/codemirror-themes": "^4.20.2",
-		"@uiw/react-codemirror": "^4.20.2",
-		"date-fns": "^2.30.0",
-		"electron-updater": "^5.3.0",
-		"firebase": "^9.22.0",
-		"github-markdown-css": "^5.2.0",
-		"react-markdown": "^8.0.7",
-		"react-router-dom": "^6.11.2",
-		"react-syntax-highlighter": "^15.5.0",
-		"remark-gfm": "^3.0.1",
-		"uid": "^2.0.2"
-	},
-	"devDependencies": {
-		"@playwright/test": "^1.32.0",
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"@types/react-syntax-highlighter": "^15.5.7",
-		"@vitejs/plugin-react": "^3.1.0",
-		"autoprefixer": "^10.4.14",
-		"electron": "^23.2.0",
-		"electron-builder": "^23.6.0",
-		"postcss": "^8.4.23",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"sass": "^1.60.0",
-		"tailwindcss": "^3.3.2",
-		"typescript": "^5.0.2",
-		"vite": "^4.1.4",
-		"vite-plugin-electron": "^0.11.2",
-		"vite-plugin-electron-renderer": "^0.14.1"
-	},
-	"engines": {
-		"node": "^14.18.0 || >=16.0.0"
-	}
+  "name": "vimnotes",
+  "version": "1.0.0",
+  "main": "dist-electron/main/index.js",
+  "description": "A simple markdown app with vim keymappings.",
+  "author": "Fdiaz",
+  "license": "MIT",
+  "private": true,
+  "debug": {
+    "env": {
+      "VITE_DEV_SERVER_URL": "http://127.0.0.1:7777/"
+    }
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build && electron-builder",
+    "preview": "vite preview",
+    "pree2e": "vite build --mode=test",
+    "e2e": "playwright test",
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
+  },
+  "dependencies": {
+    "@codemirror/lang-markdown": "^6.1.1",
+    "@codemirror/language-data": "^6.3.1",
+    "@codemirror/view": "^6.13.2",
+    "@firebase/database-types": "^0.10.4",
+    "@replit/codemirror-vim": "^6.0.14",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@uiw/codemirror-themes": "^4.20.2",
+    "@uiw/react-codemirror": "^4.20.2",
+    "date-fns": "^2.30.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "electron-updater": "^5.3.0",
+    "firebase": "^9.22.0",
+    "github-markdown-css": "^5.2.0",
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "^6.11.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1",
+    "uid": "^2.0.2"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.2.1",
+    "@electron-forge/maker-deb": "^6.2.1",
+    "@electron-forge/maker-rpm": "^6.2.1",
+    "@electron-forge/maker-squirrel": "^6.2.1",
+    "@electron-forge/maker-zip": "^6.2.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
+    "@electron-forge/publisher-github": "^6.2.1",
+    "@playwright/test": "^1.32.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.7",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "electron": "^23.2.0",
+    "electron-builder": "^24.4.0",
+    "postcss": "^8.4.23",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sass": "^1.60.0",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.0.2",
+    "vite": "^4.1.4",
+    "vite-plugin-electron": "^0.11.2",
+    "vite-plugin-electron-renderer": "^0.14.1"
+  },
+  "engines": {
+    "node": "^14.18.0 || >=16.0.0"
+  }
 }
